# DeepICD-R1

./: .gitignore  Dockerfile_train  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
configs/: accelerate_config.yaml  fsdp_config.yaml
data/: README.md
data/icd_10_cm_guidelines/: chapter_1.json  chapter_10.json  chapter_12.json  chapter_13.json  chapter_14.json  chapter_15.json  chapter_16.json  chapter_17.json  chapter_18.json  chapter_19.json  chapter_2.json  chapter_20.json  chapter_21.json  chapter_4.json  chapter_5.json  chapter_6.json  chapter_7.json  chapter_9.json
k8s/train/: grpo_train_job_32b.yaml  sft_train_job_7b.yaml  train_job_32b.yaml  train_job_7b.yaml  train_job_7b_single_trace.yaml
src/: create_oracle_reasoning_traces.py  evaluate.py  rewards.py  train_clinical_r1_zero.py
src/prompts/: llm_judge_basic_prompt.json  llm_judge_rag_prompt.json  oracle_reasoning_prompt.csv  prospective_icd_coding.csv  prospective_single_icd_coding.csv  prospective_single_icd_coding_code_only.csv
src/setup/: fill_meili.py  preprocess_data_verl.py
src/sft/: config.py  my_config.yaml  sft_trainer.py
src/utils/: __init__.py  formatter.py  io_helpers.py  label_helpers.py  metrics.py
test/: test_rewards.py
